# among-us-taskbar-mask

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
lib/nowide_standalone_v11.0.0/include/nowide/: config.hpp  convert.hpp  filebuf.hpp  fstream.hpp  stackstring.hpp  stat.hpp  utf8_codecvt.hpp
lib/nowide_standalone_v11.0.0/include/nowide/utf/: convert.hpp  utf.hpp
lib/nowide_standalone_v11.0.0/src/: filebuf.cpp  iostream.cpp
resources/win32rc/: resource.h  resource.rc
scripts/lint/: .cpplint.py  lint.sh
src/tbm/: among_us_geometry.cpp  among_us_geometry.h  app.cpp  app.h  constants.h  log.h  main.cpp
src/tbm/platform/: main_window.h  system.h  window_painter.h
src/tbm/platform/win32/: hdc_buffer.cpp  hdc_buffer.h  main_window.cpp  main_window_p.h  system.cpp  win32.cpp  win32.h  window_painter_hdc.cpp  window_painter_hdc.h
src/tbm/utils/: geometry_types.h  math_utils.h
